deploy: 88ded13dba0440032a5b4b012f0cecd74cf84969

--- a/404.md
+++ b/404.md
@@ -4,3 +4,5 @@ permalink: /404.html
 > **Note:** You accessed a link that returned a 404, probably by clicking one of the plugin links. You're supposed to copy the link address and add it into Vendetta.
 
 # nikosszzz's VD plugins repo
+
+- FriendInvites - Create/delete or delete friend invite links. [Install](https://nikosszzz.github.io/vd-plugins/friendInvites)
